# encrypting-cloud-storages

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Makefile  README.md  configuration.h  direct_asymmetric_operations.txt  fuseecs.c  fusexmp.c
CMake-Modules/: FindCMocka.cmake  FindGTK3.cmake
direct_asymmetric_encryption/: Makefile  direct_rsa_encryption.c
fuseecs/: CMakeLists.txt  Dependencies  Makefile  configuration.h  configuration.sh  data_operations.h  fuseecs  fuseecs.c  fusexmp.c  fusexmp.h  gpg_operations.c  gpg_operations.h  start_fuseecs.sh
fuseecs/direct_asymmetric_decryption_on_token/: CMakeLists.txt  Makefile  access_token.c  access_token.h
fuseecs/direct_asymmetric_encryption/: CMakeLists.txt  Dependencies  Makefile  configuration.h  direct_rsa_encryption.c  direct_rsa_encryption.h  parse_public_key.py
fuseecs/show_signer/: CMakeLists.txt  show_signer_and_get_confirmation.c  show_signer_and_get_confirmation.h
fuseecs/test/: CMakeLists.txt  data_operations_test.c  gpg_operations_test.c
share_a_folder/: CMakeLists.txt  Makefile  share_a_folder.c  start_share_a_folder.sh
start_dropbox/: start_dropbox.sh  tutorial.txt
using_libopensc_to_access_token/: Makefile  access_token.c  card-openpgp-modified.c
